# un80-actions

./: .env.example  .gitignore  .replit  .staticrypt.json  Action Plan Tracker test.xlsx  CLAUDE.md  INTEGRATION_GUIDE.md  README.md  TODO.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  run_migrations.js  run_pipeline.sh  tsconfig.json  vercel.json
.cursor/: rules.md
.github/: copilot-instructions.md
.github/workflows/: README.md  nextjs.yml  nextjs_to_github_pages.yml  process_actions_data.yml  process_data.yml  process_updates_data.yml
.husky/: pre-commit
app/: page.tsx
app/dashboard/: page.tsx
components/dashboard/: AreaChart.tsx  BarChart.tsx  PieChart.tsx  TimeSeriesChart.tsx
data/input/: actions_raw.csv  actions_raw.json  actions_raw.pkl  actions_updates_raw.json  example.csv  un80_action_dashboard_extracted_table_with_action_progress(in).csv
docs/: COLOR.md  DB_REVIEW.md  SECURITY_AND_ACCESS_CONTROL.md  TODO.md
lib/: data-service.ts
notes/: STYLES.md
public/data/: actions.csv  actions.json  actions_progress.json  last-updated.json  products_timeline.json
python/: 01-fetch_from_airtable.py  02-process_actions_data.py  README.md  __init__.py  convert_progress_csv.py  extract_docx.py  extract_pdf_tables.py  github_api.py  prepare_actions_data.py  prepare_data.py  prepare_updates_data.py  read_data.py  split_progress_pdf.py  test_github_api.py
scripts/: encrypt-site.js  password-template.html
sql/: README.md  seed_question_action1_task_force.sql
src/: middleware.ts  proxy.ts
src/lib/: db.ts  (+17 more)
(+245 files in other folders)
